# cpp-platformer

./: CMakeLists.txt
assets/levels/: level_1.json  level_2.json  level_3.json
assets/shaders/: vignette.frag
resources/: level2.json
src/: GameManager.h  animation.cpp  animation.hpp  box_collider.cpp  box_collider.hpp  main.cpp  ray_utils.cpp  ray_utils.hpp  tile.cpp  tile.hpp  tile_map.cpp  tile_map.hpp  vector.cpp  vector.hpp
src/entities/: enemy.cpp  enemy.h  finish.cpp  finish.h  player.cpp  player.h  recharge.cpp  recharge.h
src/scenes/: game.cpp  game.hpp  main_menu.hpp
src/scenes/levels/: level_1.cpp  level_1.hpp  level_2.cpp  level_2.hpp  level_3.cpp  level_3.h
